--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,3 @@
-@@ -0,0 +1,6 @@
+.idea
 
-
-# for projects that use SCons for building: http://http://www.scons.org/
-
-
-.sconsign.dblite
-
-
-
-
-
-# When configure fails, SCons outputs these
-
-
-config.log
-
-
-.sconf_temp
+/week_1/grpc/bin/
