add Dockerfile for deploy

--- a/week_2/grpc/Makefile
+++ b/week_2/grpc/Makefile
@@ -20,3 +20,14 @@ generate-note-api:
 	--go-grpc_out=pkg/note_v1 --go-grpc_opt=paths=source_relative \
 	--plugin=protoc-gen-go-grpc=bin/protoc-gen-go-grpc \
 	api/note_v1/note.proto
+
+build:
+	GOOS=linux GOARCH=amd64 go build -o bin/service_linux cmd/grpc_server/main.go
+
+copy-to-server:
+	scp service_linux root@45.12.231.86:
+
+docker-build-and-push:
+	docker buildx build --no-cache --platform linux/amd64 -t cr.selcloud.ru/mfisher1411/test-server:v0.0.1 .
+	docker login -u token -p CRgAAAAAL26gc6OrTjOWy7gPQU0I7qJscQRwsEbr cr.selcloud.ru/mfisher1411
+	docker push cr.selcloud.ru/mfisher1411/test-server:v0.0.1
