--- a/.github/workflows/week_2_ci.yaml
+++ b/.github/workflows/week_2_ci.yaml
@@ -47,7 +47,7 @@ jobs:
             key: ${{ secrets.SSHKEY }}
             envs: IMAGE_NAME,REGISTRY,GITHUB_SHA,CONTAINER_NAME
             script: |
-
+            # Set up variables
             TAG_NAME=$(echo $GITHUB_SHA | head -c7)
             # Login into Selectel Registry
             docker login -u ${{ secrets.REGISTRY_USERNAME }} -p ${{ secrets.REGISTRY_PASSWORD }} $REGISTRY
