add local migrator

--- a/week_2/postgres/docker-compose.yaml
+++ b/week_2/postgres/docker-compose.yaml
@@ -1,6 +1,5 @@
-version: '3'
-
 volumes:
+
   postgres_volume:
 
 services:
@@ -14,3 +13,10 @@ services:
       - "${PG_PORT}:5432"
     volumes:
       - postgres_volume:/var/lib/postgresql/data
+  migrator:
+    build:
+      context: .
+      dockerfile: migration.Dockerfile
+    restart: on-failure
+    environment:
+      DB_HOST: pg      
