--- a/.github/workflows/week_2_db.yaml
+++ b/.github/workflows/week_2_db.yaml
@@ -17,7 +17,7 @@ env:
 jobs:
   build-and-push:
     name: Build and Push migrator
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     outputs:
       tag: ${{ steps.meta.outputs.tag }}
     steps:
@@ -55,7 +55,7 @@ jobs:
   deploy:
     name: Deploy DB and Migrate on Selectel Cloud
     if: ${{ github.event_name != 'pull_request'}}
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     needs:
       - build-and-push
     steps:
