--- a/.github/workflows/week_2_db.yaml
+++ b/.github/workflows/week_2_db.yaml
@@ -46,7 +46,7 @@ jobs:
 
       - name: Build migrator
         run: |
-          docker-compose -f ${{ env.DB_DIR }}/docker-compose.yaml build
+          docker compose -f ${{ env.DB_DIR }}/docker-compose.yaml build
 
       - name: Push migrator to registry
         if: ${{ github.event_name != 'pull_request'}}
