add line cat .env

--- a/.github/workflows/week_2_db.yaml
+++ b/.github/workflows/week_2_db.yaml
@@ -27,6 +27,7 @@ jobs:
         run: |
           touch ${{ env.DB_DIR }}/.env
           echo "${{ secrets.POSTGRES_ENV_FILE }}" > ${{ env.DB_DIR }}/.env
+          cat .env
 
       - name: Setup Docker Tag
         id: meta
