rename env file

--- a/.github/workflows/week_2_db.yaml
+++ b/.github/workflows/week_2_db.yaml
@@ -25,9 +25,9 @@ jobs:
 
       - name: Create .env file
         run: |
-          touch ${{ env.DB_DIR }}/.env
-          echo "${{ secrets.POSTGRES_ENV_FILE }}" > ${{ env.DB_DIR }}/.env
-          cat ${{ env.DB_DIR }}/.env
+          touch ${{ env.DB_DIR }}/prod.env
+          echo "${{ secrets.POSTGRES_ENV_FILE }}" > ${{ env.DB_DIR }}/prod.env
+          cat ${{ env.DB_DIR }}/prod.env
 
       - name: Setup Docker Tag
         id: meta
