fixup! week_2_server.yaml

--- a/.github/workflows/week_2_server.yaml
+++ b/.github/workflows/week_2_server.yaml
@@ -16,7 +16,7 @@ on:
 env:
   SERVICE_PATH: week_2/postgres
   SERVICE_NAME: week_2_server
-  DOCKER_REGISTRY_URL: cr.selcloud.ru/
+  DOCKER_REGISTRY_URL: cr.selcloud.ru/mfisher1411
 
 jobs:
   
