fixup! week_2_server.yaml

--- a/.github/workflows/week_2_ci.yaml
+++ b/.github/workflows/week_2_ci.yaml
@@ -1,10 +1,10 @@
 name: CI
 
-on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+#on:
+  #push:
+  #  branches: [ main, master ]
+  #pull_request:
+  #  branches: [ main, master ]
 
 env:
   REGISTRY: "cr.selcloud.ru/mfisher1411"
