--- a/.github/workflows/week_2_db.yaml
+++ b/.github/workflows/week_2_db.yaml
@@ -1,12 +1,12 @@
 name: DB
-on:
-  push:
-    branches:
-      - main 
+#on:
+#  push:
+#    branches:
+#      - main 
 
-  pull_request:
-    branches:
-      - main    
+#  pull_request:
+#    branches:
+#      - main    
 
 
 env:
