delete paths in ci yaml file

--- a/.github/workflows/week_2_server.yaml
+++ b/.github/workflows/week_2_server.yaml
@@ -9,8 +9,8 @@ on:
   pull_request:
     branches:
       - main    
-    paths:
-      - 'week_2/grpc/**'
+    #paths:
+      #- 'week_2/grpc/**'
       #- 'libraries/db_client/**'
 
 env:
