--- a/.github/workflows/week_2_pg_local.yaml
+++ b/.github/workflows/week_2_pg_local.yaml
@@ -7,11 +7,10 @@ on:
     branches: [main]
 
 jobs:
-  call-deploy:
+  deploy-local:
     uses: ./.github/workflows/reusable_pg_deploy.yaml
     with:
       environment: local
-      env_file_content: ${{ secrets.PG_LOCAL_ENV_FILE }}
       docker_compose_file: docker-compose.local.yaml
       image_name: week_2_pg_local
     secrets:
@@ -20,3 +19,4 @@ jobs:
       SSHKEY: ${{ secrets.SSHKEY }}
       DOCKER_REGISTRY_USERNAME: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
       DOCKER_REGISTRY_PASSWORD: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
+      ENV_FILE_CONTENT: ${{ secrets.PG_LOCAL_ENV_FILE }}
