--- a/.github/workflows/week_2_server.yaml
+++ b/.github/workflows/week_2_server.yaml
@@ -59,7 +59,7 @@ jobs:
           file: ${{ env.SERVICE_PATH }}/Dockerfile
           build-args: |
             ENV_FILE=prod.env
-          context: .
+          context: week_2/config
           no-cache: true
           provenance: false  # With this setting tags appear in registry!
 
