--- a/week_2/config/Dockerfile
+++ b/week_2/config/Dockerfile
@@ -4,7 +4,7 @@ COPY . /github.com/mfisher1411/microservices_course/week_2/config/source/
 
 
 WORKDIR /github.com/mfisher1411/microservices_course/week_2/config/source/
-RUN ls -la && cat go.mod
+RUN ls -la && cat go.mod && cat prod.env
 
 RUN go mod download
 RUN go build -o ./bin/main ./cmd/grpc_server/main.go
