--- a/.github/workflows/week_2_server.yaml
+++ b/.github/workflows/week_2_server.yaml
@@ -92,5 +92,7 @@ jobs:
             docker rm  ${{env.SERVICE_NAME}} || true
             
             # Run a new container from a new image
-            docker run -d -p 50052:50052 --network ${{env.SERVICE_NAME}} --name ${{env.SERVICE_NAME}} -t ${{needs.image-build-and-push.outputs.docker-image}}
+            #docker run -d -p 50052:50052 --network ${{env.SERVICE_NAME}} --name ${{env.SERVICE_NAME}} -t ${{needs.image-build-and-push.outputs.docker-image}}
+            docker create -p 50052:50052 --network ${{env.SERVICE_NAME}} --name ${{env.SERVICE_NAME}} -t ${{needs.image-build-and-push.outputs.docker-image}}
             docker network connect pg_prod ${{env.SERVICE_NAME}} || true
+            docker start ${{env.SERVICE_NAME}}
